--- a/gb/19/7/19/n11395496.md
+++ b/gb/19/7/19/n11395496.md
@@ -1,58 +1,69 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¸£¿ËË¹ÐÂÎÅÁ¬Ðø70¸ö¼¾¶ÈÊÕÊÓÂÊ×î¸ß</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1130260560-600x400.jpg" />
-<h6>¡°¸£¿ËË¹ÐÂÎÅ¡±£¨FOX NEWS£©Á¬Ðø70¸ö¼¾¶È³ÉÎªÃÀ¹ú×îÊÜÖõÄ¿ÓÐÏßµçÊÓÃ½Ìå¡£Í¼Îª2019Äê5ÔÂ13ÈÕÎ»ÓÚÅ¦Ô¼µÚ6´óµÀ¸£¿ËË¹ËùÔÚÐÂÎÅ´óÂ¥ÃÅÇ°Ò»Æ³¡££¨Drew Angerer/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aakpdw3186/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/aakpdw3186/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/aakpdw3186/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ç¦å…‹æ–¯æ–°é—»è¿žç»­70ä¸ªå­£åº¦æ”¶è§†çŽ‡æœ€é«˜</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1130260560-600x400.jpg" />
+<h6>â€œç¦å…‹æ–¯æ–°é—»â€ï¼ˆFOX NEWSï¼‰è¿žç»­70ä¸ªå­£åº¦æˆä¸ºç¾Žå›½æœ€å—çž©ç›®æœ‰çº¿ç”µè§†åª’ä½“ã€‚å›¾ä¸º2019å¹´5æœˆ13æ—¥ä½äºŽçº½çº¦ç¬¬6å¤§é“ç¦å…‹æ–¯æ‰€åœ¨æ–°é—»å¤§æ¥¼é—¨å‰ä¸€çž¥ã€‚ï¼ˆDrew Angerer/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ19ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÀîÑÔ±àÒë±¨µ¼£©¡°<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%A6%8F%E5%85%8B%E6%96%AF%E6%96%B0%E9%97%BB.md">¸£¿ËË¹ÐÂÎÅ</a>¡±£¨FOX NEWS£©Á¬Ðø70¸ö¼¾¶È³ÉÎªÃÀ¹úÊÕÊÓÂÊ×î¸ßµÄÓÐÏßµçÊÓÐÂÎÅÍøÂç¡£ÎÞÂÛÊÇÈ«Ìì»¹ÊÇ»Æ½ðÊ±¶Î£¬ÆäÊÕÊÓÂÊ¾ù³¬¹ýÍ¬ÐÐÒµÆäËü¾ºÕù¶ÔÊÖ¡£</p>
-<p>ÔÚ2019ÄêµÚ¶þ¼¾¶È½áÊøÖ®Ê±£¬<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%A6%8F%E5%85%8B%E6%96%AF%E6%96%B0%E9%97%BB.md">¸£¿ËË¹ÐÂÎÅ</a>Á¬Ðø70¼¾¶È¶áµÃÐÐÒµÖÐÊÕÊÓÂÊÖ®¾ü¡£ÆäÉÏÎç8µãµ½Íí¼ä11µãÖ®¼äµÄÈ«ÌìÆ½¾ùÊÕÊÓÂÊÎª130ÍòÈË£¬³¬¹ýÅÅÃûµÚ¶þMSNBCµÄ90Íò¡£¶øÆä»Æ½ðÊ±¶ÎÆ½¾ù240ÍòµÄÊÕÊÓÂÊÒ²Ô¶³¬¹ýµÚ¶þÃûMSNBCµÄ170Íò¡£</p>
-<p>ÅÅÔÚÇ°5ÃûµÄÆäËü¾ºÕù¶ÔÊÖ·Ö±ðÎª¡°ÌØÄÉµçÊÓÍø¡±£¨TNT£©¡¢¡°ÓéÀÖÌåÓý½ÚÄ¿µçÊÓÍø¡±£¨ESPN£©ºÍ¡°¾Ó¼ÒÀÖ»îÆµµÀ¡±£¨HGTV£©¡£</p>
-<p>Ôø¾­Óë¸£¿ËË¹ÐÂÎÅºÍMSNBCÃûÁÐÈý´óÓÐÏßµçÊÓÃ½ÌåµÄCNN£¨ÃÀ¹úÓÐÏßµçÊÓÐÂÎÅÍø£©±¾¼¾³É¼¨¼ÌÐø³Ê×ÔÓÉÂäÌå×´ÏÂµø£¬ÅÅÃû15¡£Æä»Æ½ðÊ±¶ÎµÄ¹ÛÖÚÊýÁ¿Îª76.1Íò¡ª¡ªÂäºóÓÚ¡°Ì½Ë÷¡±£¨Discovery£©ºÍ¡°ÃÀÊ³ÆµµÀ¡±£¨Food Network£©¡£</p>
-<p>¸£¿ËË¹ÐÂÎÅÊÇÎ¨Ò»Ò»¸öÆ½¾ùÃ¿Ìì¹ÛÖÚ³¬¹ý100ÍòµÄ»ù±¾ÓÐÏßµçÊÓÍøÂç£¬ÒÔ130ÍòµÄÆ½¾ùÈ«ÌìÊÕÊÓÂÊÁ¬Ðø12¸ö¼¾¶ÈÓ®µÃ¸ÃÀà±ð¹Ú¾ü¡£ MSNBCÒÔ90ÍòµÄÊÕÊÓÂÊÅÅÃûµÚ¶þ£¬Æä´ÎÊÇHGTV¡¢¡°Äá¿Ë¶ùÍ¯ÆµµÀ¡±£¨Nickelodeon£©ºÍ¡°µ÷²é·¢ÏÖ¡±£¨Investigation Discovery£©¡£ CNNÆ½¾ùÎª52.5Íò£¬ÅÅÃûµÚ°Ë¡£</p>
-<p>¸£¿ËË¹ÐÂÎÅµÄ¡°Ð¤¶÷¡¤<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%B1%89%E5%B0%BC%E6%8F%90%E7%A7%80.md">ººÄáÌáÐã</a>¡±£¨Sean Hannity Show£©³ÉÎª±¾¼¾¶ÈÓÐÏßµçÊÓÐÂÎÅÖÐ×îÊÜ¹Ø×¢µÄ½ÚÄ¿£¬Æ½¾ùÓÐ320Íò¹ÛÖÚ¡£MSNBCµÄ¡°À×ÇÐ¶û¡¤Âê¶à¡±£¨Rachel Maddow£©Æ½¾ùÎª250Íò£¬ÅÅÃûµÚÈý¡£¡°ººÄáÌáÐã¡±25-54ËêÖ®¼äµÄ¹ÛÖÚÆ½¾ùÎª50.5Íò£¬¡°Âê¶à¡±µÄÍ¬±È¹ÛÖÚÔòÎª39.6Íò¡£</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ19æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æŽè¨€ç¼–è¯‘æŠ¥å¯¼ï¼‰â€œ<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E7%A6%8F%E5%85%8B%E6%96%AF%E6%96%B0%E9%97%BB.md#1">ç¦å…‹æ–¯æ–°é—»</a>â€ï¼ˆFOX NEWSï¼‰è¿žç»­70ä¸ªå­£åº¦æˆä¸ºç¾Žå›½æ”¶è§†çŽ‡æœ€é«˜çš„æœ‰çº¿ç”µè§†æ–°é—»ç½‘ç»œã€‚æ— è®ºæ˜¯å…¨å¤©è¿˜æ˜¯é»„é‡‘æ—¶æ®µï¼Œå…¶æ”¶è§†çŽ‡å‡è¶…è¿‡åŒè¡Œä¸šå…¶å®ƒç«žäº‰å¯¹æ‰‹ã€‚</p>
+<p>åœ¨2019å¹´ç¬¬äºŒå­£åº¦ç»“æŸä¹‹æ—¶ï¼Œ<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E7%A6%8F%E5%85%8B%E6%96%AF%E6%96%B0%E9%97%BB.md#1">ç¦å…‹æ–¯æ–°é—»</a>è¿žç»­70å­£åº¦å¤ºå¾—è¡Œä¸šä¸­æ”¶è§†çŽ‡ä¹‹å†›ã€‚å…¶ä¸Šåˆ8ç‚¹åˆ°æ™šé—´11ç‚¹ä¹‹é—´çš„å…¨å¤©å¹³å‡æ”¶è§†çŽ‡ä¸º130ä¸‡äººï¼Œè¶…è¿‡æŽ’åç¬¬äºŒMSNBCçš„90ä¸‡ã€‚è€Œå…¶é»„é‡‘æ—¶æ®µå¹³å‡240ä¸‡çš„æ”¶è§†çŽ‡ä¹Ÿè¿œè¶…è¿‡ç¬¬äºŒåMSNBCçš„170ä¸‡ã€‚</p>
+<p>æŽ’åœ¨å‰5åçš„å…¶å®ƒç«žäº‰å¯¹æ‰‹åˆ†åˆ«ä¸ºâ€œç‰¹çº³ç”µè§†ç½‘â€ï¼ˆTNTï¼‰ã€â€œå¨±ä¹ä½“è‚²èŠ‚ç›®ç”µè§†ç½‘â€ï¼ˆESPNï¼‰å’Œâ€œå±…å®¶ä¹æ´»é¢‘é“â€ï¼ˆHGTVï¼‰ã€‚</p>
+<p>æ›¾ç»ä¸Žç¦å…‹æ–¯æ–°é—»å’ŒMSNBCååˆ—ä¸‰å¤§æœ‰çº¿ç”µè§†åª’ä½“çš„CNNï¼ˆç¾Žå›½æœ‰çº¿ç”µè§†æ–°é—»ç½‘ï¼‰æœ¬å­£æˆç»©ç»§ç»­å‘ˆè‡ªç”±è½ä½“çŠ¶ä¸‹è·Œï¼ŒæŽ’å15ã€‚å…¶é»„é‡‘æ—¶æ®µçš„è§‚ä¼—æ•°é‡ä¸º76.1ä¸‡â€”â€”è½åŽäºŽâ€œæŽ¢ç´¢â€ï¼ˆDiscoveryï¼‰å’Œâ€œç¾Žé£Ÿé¢‘é“â€ï¼ˆFood Networkï¼‰ã€‚</p>
+<p>ç¦å…‹æ–¯æ–°é—»æ˜¯å”¯ä¸€ä¸€ä¸ªå¹³å‡æ¯å¤©è§‚ä¼—è¶…è¿‡100ä¸‡çš„åŸºæœ¬æœ‰çº¿ç”µè§†ç½‘ç»œï¼Œä»¥130ä¸‡çš„å¹³å‡å…¨å¤©æ”¶è§†çŽ‡è¿žç»­12ä¸ªå­£åº¦èµ¢å¾—è¯¥ç±»åˆ«å† å†›ã€‚ MSNBCä»¥90ä¸‡çš„æ”¶è§†çŽ‡æŽ’åç¬¬äºŒï¼Œå…¶æ¬¡æ˜¯HGTVã€â€œå°¼å…‹å„¿ç«¥é¢‘é“â€ï¼ˆNickelodeonï¼‰å’Œâ€œè°ƒæŸ¥å‘çŽ°â€ï¼ˆInvestigation Discoveryï¼‰ã€‚ CNNå¹³å‡ä¸º52.5ä¸‡ï¼ŒæŽ’åç¬¬å…«ã€‚</p>
+<p>ç¦å…‹æ–¯æ–°é—»çš„â€œè‚–æ©Â·<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E6%B1%89%E5%B0%BC%E6%8F%90%E7%A7%80.md#1">æ±‰å°¼æç§€</a>â€ï¼ˆSean Hannity Showï¼‰æˆä¸ºæœ¬å­£åº¦æœ‰çº¿ç”µè§†æ–°é—»ä¸­æœ€å—å…³æ³¨çš„èŠ‚ç›®ï¼Œå¹³å‡æœ‰320ä¸‡è§‚ä¼—ã€‚MSNBCçš„â€œé›·åˆ‡å°”Â·çŽ›å¤šâ€ï¼ˆRachel Maddowï¼‰å¹³å‡ä¸º250ä¸‡ï¼ŒæŽ’åç¬¬ä¸‰ã€‚â€œæ±‰å°¼æç§€â€25-54å²ä¹‹é—´çš„è§‚ä¼—å¹³å‡ä¸º50.5ä¸‡ï¼Œâ€œçŽ›å¤šâ€çš„åŒæ¯”è§‚ä¼—åˆ™ä¸º39.6ä¸‡ã€‚</p>
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">SEAN HANNITY 7/15/19 LIVE FULL SHOW HD:<a href="https://t.co/RkaVntsxK2">https://t.co/RkaVntsxK2</a><a href="https://twitter.com/hashtag/FoxNFL?src=hash&amp;ref_src=twsrc%5Etfw">#FoxNFL</a> <a href="https://twitter.com/hashtag/FoxNews?src=hash&amp;ref_src=twsrc%5Etfw">#FoxNews</a> <a href="https://twitter.com/hashtag/FoxNewsLive?src=hash&amp;ref_src=twsrc%5Etfw">#FoxNewsLive</a> <a href="https://twitter.com/hashtag/Hannity?src=hash&amp;ref_src=twsrc%5Etfw">#Hannity</a> <a href="https://twitter.com/hashtag/SeanHannity?src=hash&amp;ref_src=twsrc%5Etfw">#SeanHannity</a> <a href="https://t.co/ovVY5ytTFo">pic.twitter.com/ovVY5ytTFo</a></p>
-<p>¡ª FOX NFL (@FOXNFL1) <a href="https://twitter.com/FOXNFL1/status/1150936546914123776?ref_src=twsrc%5Etfw">July 16, 2019</a></p></blockquote>
+<p dir="ltr" lang="en">SEAN HANNITY 7/15/19 LIVE FULL SHOW HD:<ahref="https://t.co/RkaVntsxK2">https://t.co/RkaVntsxK2</a><ahref="https://twitter.com/hashtag/FoxNFL?src=hash&amp;ref_src=twsrc%5Etfw">#FoxNFL</a> <ahref="https://twitter.com/hashtag/FoxNews?src=hash&amp;ref_src=twsrc%5Etfw">#FoxNews</a> <ahref="https://twitter.com/hashtag/FoxNewsLive?src=hash&amp;ref_src=twsrc%5Etfw">#FoxNewsLive</a> <ahref="https://twitter.com/hashtag/Hannity?src=hash&amp;ref_src=twsrc%5Etfw">#Hannity</a> <ahref="https://twitter.com/hashtag/SeanHannity?src=hash&amp;ref_src=twsrc%5Etfw">#SeanHannity</a> <ahref="https://t.co/ovVY5ytTFo"></a><img width="600" src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitterè§†é¢‘æˆ–å›¾ç‰‡.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a href="ovVY5ytTFo</a></p>
+<p>â€” FOX NFL (@FOXNFL1) <ahref="https://twitter.com/FOXNFL1/status/1150936546914123776?ref_src=twsrc%5Etfw">July 16, 2019</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
-<p>Í¬ÑùÀ´×Ô¸£¿ËË¹ÐÂÎÅµÄ¡°½ñÍíËþ¿Ë?¿¨¶ûÉ­¡±£¨Tucker Carlson Tonight£©ÒÔ280ÍòµÄÆ½¾ùÊÕÊÓÂÊÅÅÃûµÚ¶þ¡£¸£¿ËË¹ÐÂÎÅµÄ ¡°Ó¢¸ñÀ­ººÄ·½Ç¡±£¨Ingraham Angle£©ºÍ¡°The Five¡±²¢ÁÐÇ°Îå¡£</p>
-<p>ÔÚ10¸ö×îÊÜÖõÄ¿µÄ½ÚÄ¿ÖÐ£¬¸£¿ËË¹ÐÂÎÅÕ¼ÁË8¸ö¡£¶øCNNÃ»ÓÐÈÎºÎ½ÚÄ¿½øÈëÇ°10Ãû¡£ÊÂÊµÉÏ£¬CNNµÄ¡°¿âÄ¬»Æ½ðÊ±¶Î¡±£¨Cuomo Prime Time£©ÔÚÕâÁ½¸öÀà±ðÖÐ¶¼´ïµ½ÓÐÊ·ÒÔÀ´µÄ¼¾¶È×îµÍ¡£</p>
-<p>ËùÓÐÊý¾Ý¾ùÓÉÄá¶ûÉ­Ã½ÌåÊÕÊÓµ÷²é£¨Nielsen Media Research£©Ìá¹©¡£</p>
-<p>¸£¿ËË¹ÐÂÎÅÊÇÃÀ¹úÎªÊý²»¶àµÄÇ÷Ïò±£ÊØÅÉ´óÃ½Ìå£¬Ò²²»ÏñÆäËûÖ÷Á÷Ã½ÌåÄÇÑù¹¥»÷´¨ÆÕ¡£Òò´Ë£¬»ñµÃÔ½À´Ô½¶àÖ§³Ö´¨ÆÕµÄÃÀ¹úÈËµÄÈÏ¿É£¬ÆäÊÕÊÓÂÊÔÚ¶à´ÎÅÅÃûÖÐÎ»ÁÐµÚÒ»¡£</p>
-<p>ÔðÈÎ±à¼­£ºÀîå¾Óî</p>
+<p>åŒæ ·æ¥è‡ªç¦å…‹æ–¯æ–°é—»çš„â€œä»Šæ™šå¡”å…‹?å¡å°”æ£®â€ï¼ˆTucker Carlson Tonightï¼‰ä»¥280ä¸‡çš„å¹³å‡æ”¶è§†çŽ‡æŽ’åç¬¬äºŒã€‚ç¦å…‹æ–¯æ–°é—»çš„ â€œè‹±æ ¼æ‹‰æ±‰å§†è§’â€ï¼ˆIngraham Angleï¼‰å’Œâ€œThe Fiveâ€å¹¶åˆ—å‰äº”ã€‚</p>
+<p>åœ¨10ä¸ªæœ€å—çž©ç›®çš„èŠ‚ç›®ä¸­ï¼Œç¦å…‹æ–¯æ–°é—»å äº†8ä¸ªã€‚è€ŒCNNæ²¡æœ‰ä»»ä½•èŠ‚ç›®è¿›å…¥å‰10åã€‚äº‹å®žä¸Šï¼ŒCNNçš„â€œåº“é»˜é»„é‡‘æ—¶æ®µâ€ï¼ˆCuomo Prime Timeï¼‰åœ¨è¿™ä¸¤ä¸ªç±»åˆ«ä¸­éƒ½è¾¾åˆ°æœ‰å²ä»¥æ¥çš„å­£åº¦æœ€ä½Žã€‚</p>
+<p>æ‰€æœ‰æ•°æ®å‡ç”±å°¼å°”æ£®åª’ä½“æ”¶è§†è°ƒæŸ¥ï¼ˆNielsen Media Researchï¼‰æä¾›ã€‚</p>
+<p>ç¦å…‹æ–¯æ–°é—»æ˜¯ç¾Žå›½ä¸ºæ•°ä¸å¤šçš„è¶‹å‘ä¿å®ˆæ´¾å¤§åª’ä½“ï¼Œä¹Ÿä¸åƒå…¶ä»–ä¸»æµåª’ä½“é‚£æ ·æ”»å‡»å·æ™®ã€‚å› æ­¤ï¼ŒèŽ·å¾—è¶Šæ¥è¶Šå¤šæ”¯æŒå·æ™®çš„ç¾Žå›½äººçš„è®¤å¯ï¼Œå…¶æ”¶è§†çŽ‡åœ¨å¤šæ¬¡æŽ’åä¸­ä½åˆ—ç¬¬ä¸€ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæŽå¯°å®‡</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/19/n11395496.htm">¸£¿ËË¹ÐÂÎÅÁ¬Ðø70¸ö¼¾¶ÈÊÕÊÓÂÊ×î¸ß</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/18/n11265836.htm">Ô¤¸æ£º¸£¿ËË¹ÐÂÎÅÍø½«Éî¶È±¨µ¼·¨ÂÖ¹¦ÕæÏà</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/7/8/n9369131.htm">¸£¿ËË¹ÐÂÎÅ½üÆÚÊÕÊÓÂÊÔ¾¾ÓµÚÒ»  CNNµøÖÁµÚ°Ë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/6/12/n9256176.htm">¸£¿ËË¹ÐÂÎÅ£ºÖÚ¶àÃÀÃ½ÎÞÊÓÕæÏàÎÞÊÓÃñÉú</a></li>
-> <li><a href="https://github.com/cbzs/djy/blob/master/gb/18/7/24/n10586579.md">Ä§¹íÔÚÍ³ÖÎ×ÅÎÒÃÇµÄÊÀ½ç(20)£ºÃ½ÌåÆª</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393790.htm">ÃÀÅ·ÈÕºÍ´óÂ½¹«Ë¾¼Ó¿ì´ÓÖÐ¹ú³ö×ß ÖÐ¹²¼±ÁË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393493.htm">¡¾ÐÂÎÅ¿´µã¡¿´¨ÆÕÔÙÓÐ¾ªÈËÖ®¾Ù ½Ò¿ªÖÐ¹²»­Æ¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393964.htm">¡¾¿ìÑ¶¡¿´¨ÆÕ£ºÃÀÍ»»÷½¢»÷»ÙÒÁÀÊÎÞÈË»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393899.htm">ÕÅ¿Û¿Û±»Ö´ÐÐËÀÐÌ ÂÉÊ¦±ç»¤´ÊÍøÉÏË¢ÆÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353774.htm">¡¾¶¨ÊýÆª¡¿ÌýÈËÉùÒô Ò²ÄÜÖªµÀËûµÄÃüÔË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/22/n11132616.htm">¡¾Õ÷ÎÄ¡¿Ò½Ê¥ÕÅÖÙ¾°ÁôÏÂÁËÒ©·½ºÍ¾¯ÊÀÃûÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/11/n11378638.htm">ÏÔÎ¢¾µÏÂµÄÑÛÀá Ã¿¿Å¶¼ÊÇ¶ÀÌØµÄÐÄÇé¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/28/n11352483.htm">Å®×ÓÐÄÔàÍ£Ìø20·ÖÖÓ ÐÑÀ´ËµÌìÌÃ¡°ÊÇÕæµÄ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11389486.htm">Ò»ÎÄ¿´¶®Õã½­9ËêÅ®Í¯ÕÂ×ÓÐÀÓöº¦ÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390697.htm">ÇàµºÄÐ×ÓÔÚÅ©ÉÌÐÐ´æ500ÍòÃÀ½ð ²»Òí¶ø·É</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390794.htm">MH370ÐÂÏßË÷£º¶à³ö200°õÉñÃØ¸ºÔØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390525.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹²Íâ½»²¿ÈçºÎ±ä³É¡°¶·Õù²¿¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388640.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹ú¾­¼Ã·Å»º ³ýÃ³Õ½»¹ÓÐ¸ü´óÔ­Òò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393206.htm">¡¾ÐÂÎÅ¿´µã¡¿¸Û·´ËÍÖÐ¸Ð¶¯¹ú¼Ê ±±¾©Ø¬ÃÎÄÑÈ¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11389084.htm">¹ùÃÀÃÀ³öÓüºó½üÕÕÆØ¹â VÁ³±äUÁ³ÒýÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388573.htm">¿¹°©³É¹¦ºóÇ©×Ö½á»é ÁÖÁ¢Ñó£ºÓÐµã²»¸ÒÏàÐÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11389491.htm">Ï£À°ÖÒ¹·ÔÚÖ÷ÈË³µ»öÉ¥Ãü´¦ÊØºòÒ»Äê°ë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11392246.htm">°²ÒÔÐùË³Àû²ú×Ó ÌðÆØÕÉ·òÈ«³ÌÅã°é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390041.htm">É½±¾²ÊÓëIZ*ONEÏà¼û»¶ Îª¾ÃÎ¥ÔÙ¼û†DÁ¼¸Ð¿®</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/17/6/12/n9256176.md#1">ç¦å…‹æ–¯æ–°é—»ï¼šä¼—å¤šç¾Žåª’æ— è§†çœŸç›¸æ— è§†æ°‘ç”Ÿ</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/17/7/8/n9369131.md#1">ç¦å…‹æ–¯æ–°é—»è¿‘æœŸæ”¶è§†çŽ‡è·ƒå±…ç¬¬ä¸€  CNNè·Œè‡³ç¬¬å…«</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/19/5/18/n11265836.md#1">é¢„å‘Šï¼šç¦å…‹æ–¯æ–°é—»ç½‘å°†æ·±åº¦æŠ¥å¯¼æ³•è½®åŠŸçœŸç›¸</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12679483.md#1">Parleré­ç¦ç”¨ ç¾Žè®®å‘˜æŒ‡æŽ§ä¸‰å¤§ä¼ä¸šæ¶‰å«Œæ¬ºè¯ˆ</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/19/n11395496.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242732.md#1" target="_blank">ã€å¾æ–‡ã€‘å¼ ä¸œå›­ï¼šå­”å­ä¸ºä»€ä¹ˆä¸æ˜¯æ— ç¥žè®ºï¼Ÿ</a></li><li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">æƒå¨å­¦è€…ï¼šä¾µçŠ¯å®—æ•™è‡ªç”± ä¸­å…±è¢«ç‚¹åæœ€å¤š</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/12/30/n12653736.md#1">ã€å‘½ç†ã€‘åº”äº«ç¦æˆ–åº”å—è‹¦ å‘½ä¸­æœ‰å®šæ•°</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/10/3/n12449907.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢12</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/4/n12665193.md#1">è¶…é€¼çœŸå†™å®žæ²¹ç”» æç»˜ç”Ÿæ´»ä¸­çš„å°å°çå®</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/12/14/n10910370.md#1">è“¦ç„¶å›žé¦–ï¼šä¸­å›½ä¹¦æ³•éœ‡æ’¼æ—¥æœ¬ä¹¦ç”»å®¶ä¹‹åŽ</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/12/27/n12647950.md#1">å¶ç„¶çš„å¤©æ„ï¼Ÿåº·ç†™æ—¶é’±å¸çš„é¢„ç¤º</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678410.md#1">ã€æ¨ªæ²³ç›´æ’­ã€‘å˜å¼‚ç—…æ¯’æ¥åŠ¿çŒ› ç¾Žå¤§ä½¿è®¿å°é‡Šä¿¡å·</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/9/n12677191.md#1">ã€æ—¶äº‹å†›äº‹ã€‘å…±å†›æ¿€å…‰ç…§å°„ ç¾Žå†›å›žæ•¬æ–°æµ·æ´‹æˆ˜ç•¥</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12676676.md#1">ã€æœ‰å†‡æžé”™ã€‘å¦‚ä½•åº¦è¿‡é»‘æš—æ—¶ä»£</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12676021.md#1">ã€æ›´æ–°ã€‘è‹¹æžœè°·æ­Œä¸‹æž¶Parleråº”ç”¨ç¨‹åº</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/9/n12678054.md#1">â€œæˆ‘ä»¬éƒ½æ˜¯å·æ™®â€ç½‘æ°‘æ¢å¤´åƒæ–¥æŽ¨ç‰¹å°æ€å·æ™®</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/9/n12678083.md#1">ã€é‡ç£…ã€‘è“¬ä½©å¥¥ï¼šè§£é™¤ç¾Žå°äº¤å¾€é™åˆ¶</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12676634.md#1">åˆ˜å˜‰çŽ²è‡ªæ›æœ‰æ´ç™– æ‹æˆæ—¶æ›¾æ¢æŽ‰é…’åº—æˆ¿é—´é©¬æ¡¶</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12676343.md#1">èº«å½¢æš´ç˜¦ä¼ æ‚£å¤§ç—… å¼ å®¶è¾‰åœå·¥ä¸€å¹´é¦–éœ²é¢</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12679612.md#1">å¥³å„¿æƒ³è¦ä¸ªå¦¹å¦¹ å¼ æ¢“ç³åé—®â€œæ˜¯å¼Ÿå¼Ÿå’‹åŠžâ€</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12675852.md#1">BTSä¸“è¾‘è¿ž5å¹´Gaonæ¦œå¤ºå†  ç¾Žå›½å®žä½“é”€é‡ä¹Ÿç¬¬ä¸€</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12675232.md#1">å°éº¦5å¹´ æ±Ÿè•™ä¸ºè®¸å¯Œå‡¯â€œæ”»è›‹â€çŒ®å£°é¼“åŠ±ç¥ç¦</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/9/n12677405.md#1">æ³¢å…°æˆ¿å±‹èµ·ç« â€œå®ˆæŠ¤å¤©ä½¿â€ç›˜æ—‹ç©ºä¸­</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12674814.md#1">ã€é‡æ’­ã€‘å…¨çƒç¡®è¯Šé€Ÿå‡ é™¤äº†å£ç½©ç–«è‹— è‡ªä¿è¿™æ ·åš</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678623.md#1">è‹±åª’ï¼šè‹±å†›ç‰¹ç§éƒ¨é˜Ÿå—è®­ æŠµæŠ—å¤–æ˜Ÿäººå…¥ä¾µ</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/9/n12678002.md#1">ç—…æ¯’å¸¦æ¥å¯æ€•ç²¾ç¥žç–¾ç—…ï¼Ÿç²¾ç¥žç§‘åŒ»å¸ˆæž4å¤§åŽŸå› </a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/4/n12666916.md#1">ã€çº¿ä¸Šæ´»åŠ¨ã€‘ç”·äººå¦‚ä½•å®ˆæŠ¤å‰åˆ—è…ºï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/19/n11395496.htm">ç¦å…‹æ–¯æ–°é—»è¿žç»­70ä¸ªå­£åº¦æ”¶è§†çŽ‡æœ€é«˜</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/aakpdw3186/djy/blob/master/gb/19/7/19/n11395496.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/aakpdw3186/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/aakpdw3186/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
